@@ -21,7 +21,7 @@ define named::caching::forwarders {
 
   $l_name = inline_template('<%= @name.delete(";").split.join("_") %>')
 
-  concat_fragment { "named_caching+${l_name}.forward":
+  simpcat_fragment { "named_caching+${l_name}.forward":
     content =>
       inline_template('<%= (@name.delete(";").split - ["127.0.0.1", "::1"]).join(";\n") + ";" %>')
   }
